[PN-18367] feat: added API getLegalFacts in openapi
